fixed projects tab with overlays being messy and overlapping eachother

--- a/src/components/Projects/style.css
+++ b/src/components/Projects/style.css
@@ -18,7 +18,7 @@
 }
 
 .pads {
-    padding: 15px 0;
+    padding: 25px 0;
 }
 
 .foot {
